--- a/layouts/partials/head/external.html
+++ b/layouts/partials/head/external.html
@@ -3,3 +3,4 @@
 {{ template "_internal/google_news.html" . }}
 {{ template "_internal/schema.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
+{{ partial "head/meta_indieweb.html" . }}
