--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -1,6 +1,9 @@
 {{/* Metadata  */}}
 <meta charset="utf-8" />
+<link href="https://gmpg.org/xfn/11" rel="profile">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <title>{{ block "title" . }}
     {{- .Title }} - {{ .Site.Title -}}
     {{ end }}</title>
@@ -16,11 +19,33 @@
 <meta name="author" content="{{ .Params.Author | default site.Params.author }}" />
 {{ hugo.Generator }}
 
+{{/* Page Level Control of Robots */}} 
+{{- with .Params.robotsdisallow }}
+<meta name="robots" content="noindex, nofollow, noarchive">
+<meta name="googlebot" content="noindex, nofollow,snippet, noarchive">
+{{- else -}}
+<meta name="robots" content="index, follow, archive">
+<meta name="googlebot" content="index,follow,snippet,archive">
+{{- end -}}
+
 {{/* Favicons  */}}
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#7b7b7b">
+<link rel="shortcut icon" href="{{ "/images/logos/favicon.ico" | absURL}}" />
+<link rel="apple-touch-icon" sizes="57x57" href="/images/logos/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/images/logos/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/images/logos/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/images/logos/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/images/logos/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/images/logos/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/images/logos/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/images/logos/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/logos/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="196x196"  href="/images/logos/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/images/logos/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/logos/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/images/logos/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/logos/favicon-16x16.png">
+<link rel="manifest" href="/images/logos/manifest.json">
 <meta name="msapplication-TileColor" content="#ffc40d">
+<meta name="msapplication-TileImage" content="/images/logos/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<link rel="mask-icon" href="/images/logos/safari-pinned-tab.svg" color="#7b7b7b">
