Moving Opengraph from Internal to Partial so we can debug

--- a/layouts/partials/head/external.html
+++ b/layouts/partials/head/external.html
@@ -1,5 +1,5 @@
 {{/* Hugo internal templates  */}}
-{{ template "_internal/opengraph.html" . }}
+{{ partial "head/meta_opengraph.html" . }}
 {{ template "_internal/google_news.html" . }}
 {{ template "_internal/schema.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
