--- a/layouts/partials/head/meta_opengraph.html
+++ b/layouts/partials/head/meta_opengraph.html
@@ -1,5 +1,6 @@
-{{- /* https://github.com/gohugoio/hugo/blob/master/tpl/tplimpl/embedded/templates/opengraph.html */}}
-
+<!-- Opengraph / Facebook Primary Attributes -->
+{{ $permalink := .Permalink }}
+{{ $permalink_pretty := .Permalink | replaceRE "\\.html$" "/" }} 
 <meta property="og:title" content="{{ .Title }}" />
 <meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}" />
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
@@ -35,12 +36,18 @@
 {{- /* If it is part of a series, link to related articles */}}
 {{- $permalink := .Permalink }}
 {{- $siteSeries := .Site.Taxonomies.series }}
-{{ with .Params.series }}{{- range $name := . }}
-  {{- $series := index $siteSeries ($name | urlize) }}
-  {{- range $page := first 6 $series.Pages }}
-    {{- if ne $page.Permalink $permalink }}<meta property="og:see_also" content="{{ $page.Permalink }}" />{{ end }}
-  {{- end }}
-{{ end }}{{ end }}
+{{- if $siteSeries }}  
+  {{ if .Params.series }} 
+    {{ $seriesUrl := .Params.series | urlize }} 
+    {{ range $taxonomyname, $taxonomy := .Site.Taxonomies.series }} 
+      {{ if eq $taxonomyname $seriesUrl }} 
+        {{- range $taxonomy.Pages.ByDate }} 
+          {{- if (ne $permalink .Permalink) }}<meta property="og:see_also" content="{{ .Permalink }}"/>{{ end }}
+        {{- end }}
+      {{ end }}
+    {{ end }}
+  {{ end }}
+{{ end }}
 
 {{- /* Facebook Page Admin ID for Domain Insights */}}
 {{- with .Site.Social.facebook_admin }}<meta property="fb:admins" content="{{ . }}" />{{ end }}
